Use Formspree for contact email.

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
     <div class="templateux-section">
       <div class="container">
-        <form action="contact_me.php" method="post" id="contact">
+        <form action="https://formspree.io/f/mkgoyyek" method="post" id="contact">
           <div class="form-row mb-5">
             <div class="col-md-5 pr-md-5 mb-5">
               <div class="form-group">
